# TraceLink

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
admin-panel/: .dockerignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
admin-panel/app/: main.py
admin-panel/app/api/: routes.py
admin-panel/app/core/: auth.py  config.py  logging.py  security.py  templates.py
admin-panel/app/db/: session.py
admin-panel/app/db/migrations/: env.py
admin-panel/app/db/migrations/versions/: 0001_initial.py
admin-panel/app/models/: user.py
admin-panel/app/services/: bootstrap.py  health.py  logs.py  qr.py  redirect_client.py  stats_client.py
admin-panel/app/tests/: conftest.py  test_bootstrap.py  test_qr.py  test_redirect_client.py  test_routes.py  test_security.py
admin-panel/static/js/: charts.js  theme.js
admin-panel/templates/: base.html  dashboard.html  detail.html  login.html  logs.html
admin-panel/templates/partials/: health.html  link_card.html  link_error.html  logs_rows.html  stats.html
docs/: API.md  ARCHITECTURE.md  SETUP.md  (+2 more)
redirect-service/: Dockerfile  alembic.ini  pyproject.toml
redirect-service/app/: main.py
redirect-service/app/api/: routes.py
redirect-service/app/core/: config.py  security.py
redirect-service/app/db/: session.py
redirect-service/app/db/migrations/: env.py
redirect-service/app/models/: link.py
redirect-service/app/schemas/: event.py  link.py
redirect-service/app/services/: cache.py  events.py  shortener.py
redirect-service/app/tests/: conftest.py  test_routes.py  test_services.py
(+22 files in other folders)
